Se empieza a desarrollar los estilos

--- a/index.html
+++ b/index.html
@@ -14,12 +14,56 @@
             200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!--Estilo para el enzabezado-->
     <header class="top_content">
-
+        <div class="icon">
+            <img src="img/alarado-icon-homepage.svg" alt="">
+        </div>
+        <div class="opcion">
+            <p>Aboust us</p>
+            <p>Product</p>
+            <p>Resource</p>
+            <p>Contact</p>
+        </div>
+        <div class="dark_mode">
+            <img src="img/Moon_fill_light.svg" alt="Moon_fill_light">
+            <img src="img/Sun_fill.svg" alt="Sun">
+        </div>
     </header>
+    <!--Contenedor main que se divide en left y right-->
     <main class="content_main">
-
+        <!--Contenedor left-->
+        <div class="content_left">
+            <div class="content_left_text">
+                <p>😎  Simple way to communicate</p>
+                <h1>
+                    Actions for Accessibility in Design
+                </h1>
+                <p>
+                    The fastest way to build and deploy websites with resusable components.
+                </p>
+            </div>
+            <div class="content_left_button">
+                <button class="left_button">
+                    GET STARTED
+                </button>
+                <a href="#">Get live demo</a>
+            </div>
+            <div class="check">
+                <div class="check_left">
+                    <img src="img/Done_ring_round_fill.svg" alt="check">
+                    <p>No credit card required</p>
+                </div>
+                <div class="check_right">
+                    <img src="img/Done_ring_round_fill.svg" alt="check">
+                    <p>No software to install</p>
+                </div>
+            </div>
+        </div>
+        <!--Contenedor right-->
+        <div class="content_right">
+            <img src="img/hero-image-simple-homepage.png" alt="hero-image-simple-homepage">
+        </div>
     </main>
-
 </body>
 </html>
