Se empieza a desarrollar los estilos

--- a/index.html
+++ b/index.html
@@ -7,11 +7,6 @@
     <!--Link del estilo-->
     <link rel="stylesheet" href="css/style.css">
     <!--Link del font-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,
-            100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,
-            200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <!--Estilo para el enzabezado-->
@@ -20,14 +15,14 @@
             <img src="img/alarado-icon-homepage.svg" alt="">
         </div>
         <div class="opcion">
-            <p>Aboust us</p>
+            <p class="bold">Aboust us</p>
             <p>Product</p>
             <p>Resource</p>
             <p>Contact</p>
         </div>
         <div class="dark_mode">
-            <img src="img/Moon_fill_light.svg" alt="Moon_fill_light">
-            <img src="img/Sun_fill.svg" alt="Sun">
+            <img class="moon" src="img/Moon_fill_light.svg" alt="Moon_fill_light">
+            <img class="sun" src="img/Sun_fill.svg" alt="Sun">
         </div>
     </header>
     <!--Contenedor main que se divide en left y right-->
