Se empieza a desarrollar los estilos

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         <!--Contenedor left-->
         <div class="content_left">
             <div class="content_left_text">
-                <p>😎  Simple way to communicate</p>
-                <h1>
+                <p class="text_header">😎  Simple way to communicate</p>
+                <h1 class="text_main">
                     Actions for Accessibility in Design
                 </h1>
-                <p>
+                <p class="text_body">
                     The fastest way to build and deploy websites with resusable components.
                 </p>
             </div>
