reto terminado con la opcion de cambiar de color con css y js

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Simple_Homepage-Alarado</title>
     <!--Link del estilo-->
     <link rel="stylesheet" href="css/style.css">
-    <!--Link del font-->
 </head>
 <body>
     <!--Estilo para el enzabezado-->
@@ -60,5 +59,7 @@
             <img src="img/hero-image-simple-homepage.png" alt="hero-image-simple-homepage">
         </div>
     </main>
+    <!-- Agregar el script para cambiar de modo -->
+    <script src="js/dark_mode.js"></script>
 </body>
 </html>
